--- a/biolink/package.json
+++ b/biolink/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "biolink": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
